add heatmap file and output both map and heatmap as html

--- a/kolumbus/kolumbus_map.ipynb
+++ b/kolumbus/kolumbus_map.ipynb
@@ -2,18 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ee5c55e0-f5c1-44fe-8ad3-f3e9ab4def7f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28005\n"
+     ]
+    }
+   ],
    "source": [
-    "import pprint as pp\n",
     "import pandas as pd\n",
     "import folium\n",
+    "import os\n",
     "\n",
     "\n",
     "def count_rows():\n",
-    "    path = \"dataset/kolumbus/2023-09-\"\n",
+    "    path = \"../dataset/kolumbus/2023-09-\"\n",
     "    filetype = \".csv\"\n",
     "    csv_files = [\n",
     "        path + \"04\" + filetype,\n",
@@ -54,7 +62,7 @@
     "        print(f\"{file_name}: {count}\")\n",
     "\n",
     "\n",
-    "data = pd.read_csv(\"dataset/kolumbus/2023-09-04.csv\")\n",
+    "data = pd.read_csv(\"../dataset/kolumbus/2023-09-04.csv\")\n",
     "filtered_data = data[\n",
     "    (data[\"latitude\"] >= 58.71)\n",
     "    & (data[\"latitude\"] <= 59.02)\n",
@@ -64,17 +72,18 @@
     "\n",
     "count = 0\n",
     "\n",
-    "map = folium.Map(\n",
-    "    location=[58.97, 5.70], zoom_start=10\n",
-    ")  # Replace with desired center coordinates\n",
-    "for index, row in filtered_data.iloc[::1000].iterrows():\n",
+    "map = folium.Map(location=[58.97, 5.70], zoom_start=10)\n",
+    "# iloc to skip rows\n",
+    "for index, row in filtered_data.iloc[::100].iterrows():\n",
     "    latitude = row[\"latitude\"]\n",
     "    longitude = row[\"longitude\"]\n",
     "    count += 1\n",
     "    folium.CircleMarker([latitude, longitude], radius=1, weight=1).add_to(map)\n",
     "\n",
+    "output_file_path = os.path.join(\"../kolumbus/output/\", \"kolumbus_map.html\")\n",
+    "map.save(output_file_path)\n",
     "\n",
-    "#display(map)\n",
+    "# display(map)\n",
     "print(count)\n",
     "# count_rows()"
    ]
