--- a/porto/porto_clean_data.ipynb
+++ b/porto/porto_clean_data.ipynb
@@ -49,7 +49,7 @@
     "# Containning variables and constants for this spreadsheet\n",
     "SHOULD_DELETE_OLD_FILES= True\n",
     "\n",
-    "OUTPUT_FOLDER = \"./output/\"\n",
+    "OUTPUT_FOLDER = \"../porto/output/\"\n",
     "RAW_DATA_FILE = \"../dataset/porto/porto_raw.csv\"\n",
     "CLEAN_DATA_FILE = \"../dataset/porto/porto_clean.csv\"\n",
     "\n",
