--- a/heatmaps/rome_heatmap.ipynb
+++ b/heatmaps/rome_heatmap.ipynb
@@ -2,65 +2,66 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
-    "import folium  # Importing Folium\n",
+    "import folium\n",
     "from folium.plugins import HeatMap\n",
-    "import ast\n",
-    "# Reading the data\n",
-    "input_file_path = os.path.join(\"../dataset/porto\", \"porto_clean.csv\")\n",
-    "df = pd.read_csv(input_file_path, usecols=[\"POLYLINE\"])\n",
+    "import ast  # To safely evaluate string representations of lists\n",
     "\n",
-    "# Bounds\n",
-    "MAX_LON = -8.57\n",
-    "MIN_LON = -8.66\n",
-    "MAX_LAT = 41.19\n",
-    "MIN_LAT = 41.14\n",
-    "MIN_LEN = 40\n",
+    "input_file_path = os.path.join(\"../dataset/rome\", \"rome.csv\")\n",
     "\n",
-    "all_coords = []\n",
+    "# Read the CSV data into a DataFrame\n",
+    "df = pd.read_csv(input_file_path, usecols=['location'])\n",
     "\n",
-    "# Iterate over each row in the DataFrame\n",
-    "for index, row in df.iterrows():\n",
-    "    # Convert the polyline string to a list of coordinates\n",
-    "    polyline = ast.literal_eval(row['POLYLINE'])\n",
-    "    swapped_polyline = [(lat, lon) for lon, lat in polyline]\n",
-    "    all_coords.extend(swapped_polyline)\n",
+    "# bounds\n",
+    "MAX_LON = 12.53\n",
+    "MIN_LON = 12.44\n",
+    "MAX_LAT = 41.93\n",
+    "MIN_LAT = 41.88\n",
+    "\n",
+    "# Initialize an empty list to store the coordinates\n",
+    "coordinates = []\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Heatmap saved to ../porto/output/porto_heatmap.html\n"
+      "Heatmap saved to ../rome/output/rome_heatmap.html\n"
      ]
     }
    ],
    "source": [
+    "# Iterate over each row in the DataFrame\n",
+    "for index, row in df.iterrows():\n",
+    "    # Convert the location string to a list of coordinates\n",
+    "    location = ast.literal_eval(row['location'])\n",
+    "    coordinates.append(location)\n",
     "\n",
     "center_lat = (MAX_LAT + MIN_LAT) / 2\n",
     "center_lon = (MAX_LON + MIN_LON) / 2\n",
+    "\n",
     "# Create a Folium map at the average location\n",
     "map = folium.Map(location=[center_lat, center_lon], zoom_start=14)\n",
     "\n",
     "# Add a HeatMap layer to the map\n",
-    "HeatMap(all_coords, radius=16, blur=17.5).add_to(map)\n",
+    "HeatMap(coordinates, radius=17.5, blur=15).add_to(map)\n",
     "\n",
     "# Save the map to an HTML file\n",
-    "map_path = os.path.join(\"../porto/output/\", \"porto_heatmap.html\")\n",
+    "map_path = os.path.join(\"../rome/output/\", \"rome_heatmap.html\")\n",
     "map.save(map_path)\n",
     "\n",
-    "print(\"Heatmap saved to\", map_path)"
+    "print(\"Heatmap saved to\", map_path)\n"
    ]
   }
  ],
