--- a/processing/porto_clean_data.ipynb
+++ b/processing/porto_clean_data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,16 +42,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Containning variables and constants for this spreadsheet\n",
-    "SHOULD_DELETE_OLD_FILES= True\n",
+    "SHOULD_DELETE_OLD_FILES= False\n",
     "\n",
-    "OUTPUT_FOLDER = \"../porto/output/\"\n",
+    "OUTPUT_FOLDER = \"../dataset/porto\"\n",
     "RAW_DATA_FILE = \"../dataset/porto/porto_raw.csv\"\n",
-    "CLEAN_DATA_FILE = \"../dataset/porto/porto_clean.csv\"\n",
+    "CLEAN_DATA_FILE = \"../dataset/porto/porto.csv\"\n",
     "\n",
     "LOG = False # Set to true for printing during data extraction\n",
     "\n",
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,9 +81,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '../dataset/porto/output/'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Run this cell to clear the chosen files in the PORTO folder\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m SHOULD_DELETE_OLD_FILES:\n\u001b[0;32m----> 4\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m filename \u001b[38;5;129;01min\u001b[39;00m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mOUTPUT_FOLDER\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[1;32m      5\u001b[0m         file_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(OUTPUT_FOLDER, filename)\n\u001b[1;32m      6\u001b[0m         \u001b[38;5;28;01mtry\u001b[39;00m:\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../dataset/porto/output/'"
+     ]
+    }
+   ],
    "source": [
     "# Run this cell to clear the chosen files in the PORTO folder\n",
     "\n",
@@ -101,14 +113,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of cleaned trajectories written to file: 0\n"
+      "Number of cleaned trajectories written to file: 1000\n"
      ]
     }
    ],
