--- a/processing/rome_clean_data.ipynb
+++ b/processing/rome_clean_data.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,17 +50,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Declaring variables and constants for this sheet\n",
     "\n",
-    "SHOULD_DELETE_OLD_FILES= True\n",
+    "SHOULD_DELETE_OLD_FILES= False\n",
     "\n",
-    "OUTPUT_FOLDER = \"../rome/output/\"\n",
+    "OUTPUT_FOLDER = \"../dataset/rome\"\n",
     "RAW_DATA_FILE = \"../dataset/rome/rome_raw.txt\"\n",
-    "CLEAN_DATA_FILE = \"../dataset/rome/rome_clean.csv\"\n",
+    "CLEAN_DATA_FILE = \"../dataset/rome/rome.csv\"\n",
     "\n",
     "\n",
     "LOG = False # Set to true for printing/debug during data extraction\n",
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.6+"
   }
  },
  "nbformat": 4,
