support saving of trajectory files by namecounter and add various utils files

--- a/processing/rome_clean_data.ipynb
+++ b/processing/rome_clean_data.ipynb
@@ -10,82 +10,89 @@
     "\n",
     "Et trajectory blir lagret dersom det er minst MIN_LEN punkter langt, er innenfor MIN_DIST og MAX_DIST, samt at avstanden mellom start og sluttpunkt ikke er mer enn 2.5 ganger sporets reelle lengde.\n",
     "\n",
-    "Sporene blir konstruert slik at siste punkt i et spor, kan ha sitt neste (naturlige) punkt i det neste genererte sporet, såfremt det tilfreddsstiller de andre kravene under generering. Dette bør ikke bli et problem, men er greit å opplyse om i oppgaven. De genererte sporene fra Roma-settet vil trolig ha mer komplisert data enn Porto, da det ikke er gitt om de genererte sporene er faktiske taxiturer, deler av taxiturer, snirkling - det kan være hva som helst, og mest sannsynlig en blanding av flere kategorier av kjøretyper."
+    "Sporene blir konstruert slik at siste punkt i et spor, kan ha sitt neste (naturlige) punkt i det neste genererte sporet, såfremt det tilfreddsstiller de andre kravene under generering. Dette bør ikke bli et problem, men er greit å opplyse om i oppgaven. De genererte sporene fra Roma-settet vil trolig ha mer komplisert data enn Porto, da det ikke er gitt om de genererte sporene er faktiske taxiturer, deler av taxiturer, snirkling - det kan være hva som helst, og mest sannsynlig en blanding av flere kategorier av kjøretyper.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Importing necessary modules\n",
-    "import pandas as pd\n",
-    "# from tqdm import tqdm\n",
-    "import math\n",
-    "import re\n",
-    "import numpy as np\n",
-    "\n",
-    "from datetime import datetime, timedelta\n",
-    "import os, shutil\n",
     "from haversine import haversine, Unit\n",
+    "import shutil\n",
+    "import os\n",
+    "from datetime import datetime, timedelta\n",
+    "import numpy as np\n",
+    "import re\n",
+    "import math\n",
+    "import pandas as pd\n",
+    "\n",
+    "import sys\n",
+    "\n",
+    "# setting path\n",
+    "sys.path.append(\"../utils\")\n",
+    "# from tqdm import tqdm\n",
+    "\n",
     "\n",
     "def calculate_trajectory_distance(positions: list[tuple[float]]) -> float:\n",
     "    \"\"\"\n",
     "    Calculate the trajectory distance for a trajectory\n",
     "\n",
     "    :param: List of coordinates (lat, lon)\n",
-    "    \n",
+    "\n",
     "    :return: Float (km) -> Combined distance between all pairs of points in km\n",
     "    \"\"\"\n",
     "    distance = 0\n",
     "    for i in range(1, len(positions)):\n",
-    "        from_location = positions[i-1]\n",
+    "        from_location = positions[i - 1]\n",
     "        to_location = positions[i]\n",
     "\n",
     "        distance += haversine(from_location, to_location, unit=Unit.KILOMETERS)\n",
-    "    return distance\n",
-    "\n"
+    "    return distance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Declaring variables and constants for this sheet\n",
     "\n",
-    "SHOULD_DELETE_OLD_FILES= False\n",
+    "SHOULD_DELETE_OLD_FILES = False\n",
     "\n",
-    "OUTPUT_FOLDER = \"../dataset/rome\"\n",
+    "OUTPUT_FOLDER = \"../dataset/rome/output\"\n",
     "RAW_DATA_FILE = \"../dataset/rome/rome_raw.txt\"\n",
     "CLEAN_DATA_FILE = \"../dataset/rome/rome.csv\"\n",
     "\n",
     "\n",
-    "LOG = False # Set to true for printing/debug during data extraction\n",
+    "LOG = False  # Set to true for printing/debug during data extraction\n",
     "\n",
     "MAX_LON = 12.53\n",
     "MIN_LON = 12.44\n",
     "MAX_LAT = 41.93\n",
     "MIN_LAT = 41.88\n",
     "\n",
-    "MIN_LEN = 40 # Perhaps change this one\n",
-    "MIN_DIST = 4 # In km\n",
-    "MAX_DIST = 6 # In km\n",
+    "MIN_LEN = 40  # Perhaps change this one\n",
+    "MIN_DIST = 4  # In km\n",
+    "MAX_DIST = 6  # In km\n",
     "\n",
-    "MAX_TIME_DIFF_SECONDS = 32 # Maximum time difference between two consecutive trackpoints in a trajectory\n",
-    "MAX_DIST_BETWEEN_LOCATIONS = 0.4 # Km\n",
+    "MAX_TIME_DIFF_SECONDS = (\n",
+    "    32  # Maximum time difference between two consecutive trackpoints in a trajectory\n",
+    ")\n",
+    "MAX_DIST_BETWEEN_LOCATIONS = 0.4  # Km\n",
     "\n",
-    "NUMBER_OF_TRACES = 10\n",
+    "NUMBER_OF_TRACES = 500\n",
     "\n",
-    "X = calculate_trajectory_distance([ ( MIN_LAT, MIN_LON ) , ( MAX_LAT, MIN_LON ) ])\n",
-    "Y = calculate_trajectory_distance([ ( MIN_LAT, MIN_LON ) , ( MIN_LAT, MAX_LON ) ])"
+    "X = calculate_trajectory_distance([(MIN_LAT, MIN_LON), (MAX_LAT, MIN_LON)])\n",
+    "Y = calculate_trajectory_distance([(MIN_LAT, MIN_LON), (MIN_LAT, MAX_LON)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -121,42 +128,46 @@
    "source": [
     "# Reading the dataset into a dataframe\n",
     "\n",
-    "raw_df = pd.read_csv(RAW_DATA_FILE, delimiter=\";\", names=[\"index\", \"timestamp\", \"location\"])\n",
+    "raw_df = pd.read_csv(\n",
+    "    RAW_DATA_FILE, delimiter=\";\", names=[\"index\", \"timestamp\", \"location\"]\n",
+    ")\n",
     "\n",
     "print(raw_df.head(10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Must sort the values according to their index and timestamp \n",
+    "# Must sort the values according to their index and timestamp\n",
     "# Also copying the dataframe as we will touch the values in the \"location\" column\n",
     "# Will probably take some time\n",
     "\n",
     "df = raw_df.head(1500000).sort_values(by=[\"index\", \"timestamp\"]).copy()\n",
     "\n",
     "# Deleting raw_df for performance reasons\n",
-    "del raw_df\n"
+    "del raw_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Cell that translates the location column of the dataframe to only the locations\n",
     "# Will probably take some time to finish\n",
     "\n",
-    "df[\"location\"] = df[\"location\"].apply(lambda x: re.search(r'\\(.*?\\)', x).group(0)[1:-1].replace(\" \", \",\"))\n"
+    "df[\"location\"] = df[\"location\"].apply(\n",
+    "    lambda x: re.search(r\"\\(.*?\\)\", x).group(0)[1:-1].replace(\" \", \",\")\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -184,13 +195,19 @@
      "output_type": "stream",
      "text": [
       "[[2, '2014-02-01 00:14:10.132878+01', [41.9033913036255, 12.4876087503095]], [2, '2014-02-01 01:14:53.440003+01', [41.8999142436576, 12.4441906822934]], [2, '2014-02-01 01:52:19.7449+01', [41.8959594244013, 12.4496450994481]], [2, '2014-02-01 02:58:57.352827+01', [41.8824816421777, 12.454844364531]], [2, '2014-02-01 04:42:58.23288+01', [41.9077406913423, 12.4910772764437]], [2, '2014-02-01 21:42:43.685802+01', [41.9053566960219, 12.4493586509094]], [2, '2014-02-01 21:58:53.645706+01', [41.9031474155762, 12.4867018941079]], [2, '2014-02-01 23:40:25.264024+01', [41.9127874299986, 12.4929061846492]], [2, '2014-02-02 04:58:28.729974+01', [41.9126299945405, 12.4845480461226]], [2, '2014-02-02 05:19:42.090741+01', [41.9129688470329, 12.4502509292558]]]\n",
-      "Created 3059 trajectories\n"
+      "Created 6118 trajectories\n"
      ]
     }
    ],
    "source": [
     "# Cell to extract traces that are of a minimum length of N locations and within a given distance window\n",
+    "from utils.alphabetical import increment_alphabetical\n",
+    "from utils.save_trajectory import save_current_trajectory\n",
+    "from utils.metafile_handler import create_meta_files, get_meta_files, delete_meta_files\n",
+    "\n",
+    "\n",
     "counter = 0\n",
+    "name_counter = \"AAA\"\n",
     "\n",
     "last_driver_id = None\n",
     "last_timestamp = None\n",
@@ -199,10 +216,9 @@
     "\n",
     "cleaned_trajectories = []\n",
     "for index, row in df.iterrows():\n",
-    "\n",
     "    current_driver_id = row[\"index\"]\n",
     "    current_timestamp = row[\"timestamp\"]\n",
-    "    \n",
+    "\n",
     "    current_location = row[\"location\"].split(\",\")\n",
     "    lat, lon = current_location\n",
     "\n",
@@ -215,15 +231,22 @@
     "        continue\n",
     "\n",
     "    # Location outside bounded rectangle, go to next row\n",
-    "    if ( not ( MIN_LON <= float(lon) <= MAX_LON )) or ( not ( MIN_LAT <= float(lat) <= MAX_LAT )):\n",
-    "        if LOG: print(\"Location outside bounded rectangle: \", lat,lon)\n",
+    "    if (not (MIN_LON <= float(lon) <= MAX_LON)) or (\n",
+    "        not (MIN_LAT <= float(lat) <= MAX_LAT)\n",
+    "    ):\n",
+    "        if LOG:\n",
+    "            print(\"Location outside bounded rectangle: \", lat, lon)\n",
     "        continue\n",
-    "    \n",
-    "    try:\n",
     "\n",
-    "        # Checking whether time between two consecutive points are greater than a given const \n",
-    "        t_last = datetime.strptime(last_timestamp[0:last_timestamp.index(\".\")], \"%Y-%m-%d %H:%M:%S\")\n",
-    "        t_current = datetime.strptime(current_timestamp[0:current_timestamp.index(\".\")], \"%Y-%m-%d %H:%M:%S\")\n",
+    "    try:\n",
+    "        # Checking whether time between two consecutive points are greater than a given const\n",
+    "        t_last = datetime.strptime(\n",
+    "            last_timestamp[0: last_timestamp.index(\".\")], \"%Y-%m-%d %H:%M:%S\"\n",
+    "        )\n",
+    "        t_current = datetime.strptime(\n",
+    "            current_timestamp[0: current_timestamp.index(\n",
+    "                \".\")], \"%Y-%m-%d %H:%M:%S\"\n",
+    "        )\n",
     "\n",
     "    except:\n",
     "        last_timestamp = current_timestamp\n",
@@ -232,61 +255,99 @@
     "        trajectory.clear()\n",
     "        continue\n",
     "\n",
-    "\n",
     "    # If timedelta small enough\n",
     "    if t_current - t_last <= timedelta(seconds=MAX_TIME_DIFF_SECONDS):\n",
-    "        if LOG: print(\"Timedelta is small enough\")\n",
-    "        \n",
+    "        if LOG:\n",
+    "            print(\"Timedelta is small enough\")\n",
+    "\n",
     "        trajectory.append((float(lat), float(lon)))\n",
     "\n",
     "    if MIN_LEN <= len(trajectory):\n",
     "        trajectory_distance = calculate_trajectory_distance(trajectory)\n",
-    "        shortest_distance = calculate_trajectory_distance([trajectory[0],trajectory[-1]])\n",
+    "        shortest_distance = calculate_trajectory_distance(\n",
+    "            [trajectory[0], trajectory[-1]]\n",
+    "        )\n",
     "\n",
-    "        if  MIN_DIST <= trajectory_distance <= MAX_DIST and trajectory_distance < shortest_distance * 2.5:\n",
+    "        if (\n",
+    "            MIN_DIST <= trajectory_distance <= MAX_DIST\n",
+    "            and trajectory_distance < shortest_distance * 2.5\n",
+    "        ):\n",
     "            # TODO Ensure that all points in trajectory are valid\n",
-    "            \n",
+    "\n",
     "            old_loc = trajectory[0]\n",
     "            for loc in trajectory:\n",
     "                if old_loc != loc:\n",
-    "                    distance = calculate_trajectory_distance([(old_loc), (loc)])\n",
+    "                    distance = calculate_trajectory_distance(\n",
+    "                        [(old_loc), (loc)])\n",
     "\n",
     "                    # If distance between two consecutive coordinates are too great:\n",
     "                    if distance > MAX_DIST_BETWEEN_LOCATIONS:\n",
-    "                        if LOG: print(\"Possibly noisy data - continuing with next trace\")\n",
-    "                        break \n",
+    "                        if LOG:\n",
+    "                            print(\"Possibly noisy data - continuing with next trace\")\n",
+    "                        break\n",
     "\n",
     "                old_loc = loc\n",
-    "            \n",
-    "            else:            \n",
-    "            \n",
+    "\n",
+    "            else:\n",
     "                # Saving trajectory and updating variables\n",
     "                # print(\"------------------------------------\")\n",
     "                # print(trajectory)\n",
     "                # coordinates_lists = [[lat, lon] for lat, lon in trajectory]\n",
-    "                cleaned_trajectories.append([current_driver_id, current_timestamp, [float(lat), float(lon)]])\n",
-    "                if LOG: print(f\"Total distance: {trajectory_distance, shortest_distance, len(trajectory)}\")\n",
+    "                cleaned_trajectories.append(\n",
+    "                    [current_driver_id, current_timestamp,\n",
+    "                        [float(lat), float(lon)]]\n",
+    "                )\n",
+    "                # if LOG:\n",
+    "                #     print(\n",
+    "                #         f\"Total distance: {trajectory_distance,\n",
+    "                #                            shortest_distance, len(trajectory)}\"\n",
+    "                #     )\n",
+    "                save_current_trajectory(\n",
+    "                    OUTPUT_FOLDER=OUTPUT_FOLDER,\n",
+    "                    file_name=name_counter,\n",
+    "                    trajectory=trajectory,\n",
+    "                )\n",
+    "                # if LOG:\n",
     "\n",
-    "                counter +=1\n",
-    "            \n",
+    "                #     print(\n",
+    "                #         f\"Total distance: {\n",
+    "                #             name_counter, trajectory_distance, shortest_distance, len(trajectory)}\"\n",
+    "                #     )\n",
+    "\n",
+    "                counter += 1\n",
+    "                name_counter = increment_alphabetical(name_counter)\n",
+    "\n",
+    "                counter += 1\n",
+    "\n",
     "            trajectory.clear()\n",
     "\n",
     "        if trajectory_distance > MAX_DIST:\n",
     "            trajectory.clear()\n",
     "\n",
-    "    \n",
-    "    # If enough trajetories are generated: \n",
-    "    # if counter >= NUMBER_OF_TRACES: \n",
+    "    # If enough trajetories are generated:\n",
+    "    # if counter >= NUMBER_OF_TRACES:\n",
     "    #     break\n",
-    "    \n",
+    "\n",
     "    last_timestamp = current_timestamp\n",
     "    # last_driver_id = last_driver_id\n",
     "    # last_location = last_location\n",
     "print(cleaned_trajectories[0:10])\n",
-    "cleaned_df = pd.DataFrame(cleaned_trajectories, columns=[\"index\", \"timestamp\", \"location\"])\n",
+    "cleaned_df = pd.DataFrame(\n",
+    "    cleaned_trajectories, columns=[\"index\", \"timestamp\", \"location\"]\n",
+    ")\n",
     "cleaned_df.to_csv(CLEAN_DATA_FILE, index=False)\n",
     "\n",
     "print(f\"Created {counter} trajectories\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_meta_files(path_to_files=OUTPUT_FOLDER,\n",
+    "                  data_prefix=\"R_\", create_test_set=True)"
    ]
   }
  ],
@@ -306,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6+"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
