add benchmarks folder

--- a/dtw_benchmark.ipynb
+++ b/dtw_benchmark.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,6 @@
     "\n",
     "from processing.utils import metafile_handler as mfh\n",
     "from processing.utils import file_handler as fh\n",
-    "\n",
     "from utils import dtw\n",
     "\n",
     "# from benchmarks import frechet"
@@ -24,20 +23,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# DATA_ROME = \"../data/chosen_data/rome/\"\n",
     "DATA_ROME = \"dataset/rome/output/\"\n",
     "# SIM_OUT_FOLDER = \"../code/benchmarks/similarities/\"\n",
-    "SIM_OUT_FOLDER = \"similarities/\"\n",
+    "SIM_OUT_FOLDER = \"benchmarks/similarities/rome/\"\n",
     "\n",
     "# ROME_FULL_SET = \"../data/chosen_data/rome/META-1000.txt\"\n",
     "\n",
     "# TEST_SET_ROME = \"../data/chosen_data/rome/META-50.txt\"\n",
     "# TEST_SET_ROME = \"dataset/rome/output/META-50-bjorn.txt\"\n",
-    "TEST_SET_ROME = \"dataset/rome/output/META-1000.txt\"\n",
+    "TEST_SET_ROME = \"dataset/rome/output/META-100.txt\"\n",
     "\n",
     "ROME_DTW_FILE = \"rome-dtw.csv\"\n",
     "\n",
@@ -46,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,13 +97,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# generate_dtw_similarities(DATA_ROME, TEST_SET_ROME, ROME_DTW_FILE)\n",
     "\n",
-    "generate_parallell_dtw_similarities(DATA_ROME, TEST_SET_ROME, ROME_DTW_FILE_TEST)"
+    "generate_parallell_dtw_similarities(\n",
+    "    DATA_ROME, TEST_SET_ROME, ROME_DTW_FILE_TEST)"
    ]
   }
  ],
