Porto trajectories and dtw benchmark structuring (#1)
* include meta/index files for rome dataset while gitignoring txt trajectories

* support trajectory saving for porto and rome, and set limit to 3000 trajectories

* create index/meta files for up to 3000 trajectories while gitignoring actual trajectory files

* structure dtw benchmark creation

--- a/dtw_benchmark.ipynb
+++ b/dtw_benchmark.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,34 +23,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# DATA_ROME = \"../data/chosen_data/rome/\"\n",
     "DATA_ROME = \"dataset/rome/output/\"\n",
-    "# SIM_OUT_FOLDER = \"../code/benchmarks/similarities/\"\n",
-    "SIM_OUT_FOLDER = \"benchmarks/similarities/rome/\"\n",
+    "TEST_SET_ROME = \"dataset/rome/output/META-50.txt\"\n",
+    "FULL_SET_ROME = \"dataset/rome/output/META-1000.txt\"\n",
+    "SIMILARITIES_OUTPUT_FOLDER_ROME = \"benchmarks/similarities/rome/\"\n",
+    "DTW_FILENAME_ROME = \"rome-dtw-fullset.csv\"\n",
+    "DTW_FILENAME_TEST_ROME = \"rome-dtw-testset.csv\"\n",
     "\n",
-    "# ROME_FULL_SET = \"../data/chosen_data/rome/META-1000.txt\"\n",
+    "DATA_PORTO = \"dataset/porto/output/\"\n",
+    "TEST_SET_PORTO = \"dataset/porto/output/META-50.txt\"\n",
+    "FULL_SET_PORTO = \"dataset/porto/output/META-1000.txt\"\n",
+    "SIMILARITIES_OUTPUT_FOLDER_PORTO = \"benchmarks/similarities/porto/\"\n",
+    "DTW_FILENAME_PORTO = \"porto-dtw-fullset.csv\"\n",
+    "DTW_FILENAME_TEST_PORTO = \"porto-dtw-testset.csv\"\n",
     "\n",
-    "# TEST_SET_ROME = \"../data/chosen_data/rome/META-50.txt\"\n",
-    "# TEST_SET_ROME = \"dataset/rome/output/META-50-bjorn.txt\"\n",
-    "TEST_SET_ROME = \"dataset/rome/output/META-100.txt\"\n",
-    "\n",
-    "ROME_DTW_FILE = \"rome-dtw.csv\"\n",
-    "\n",
-    "ROME_DTW_FILE_TEST = \"rome-dtw-test.csv\""
+    "DATA_KOLOMBUS = \"dataset/kolombus/output/\"\n",
+    "TEST_SET_KOLOMBUS = \"dataset/kolombus/output/META-50.txt\"\n",
+    "FULL_SET_KOLOMBUS = \"dataset/kolombus/output/META-1000.txt\"\n",
+    "SIMILARITIES_OUTPUT_FOLDER_KOLOMBUS = \"benchmarks/similarities/kolombus/\"\n",
+    "DTW_FILENAME_KOLOMBUS = \"kolombus-dtw-fullset.csv\"\n",
+    "DTW_FILENAME_TEST_KOLOMBUS = \"kolombus-dtw-testset.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def deleteFile(file_name: str) -> None:\n",
-    "    file_path = os.path.join(SIM_OUT_FOLDER, file_name)\n",
+    "def deleteFile(file_name: str, folder_name: str) -> None:\n",
+    "    file_path = os.path.join(folder_name, file_name)\n",
     "    try:\n",
     "        if os.path.isfile(file_path) or os.path.islink(file_path):\n",
     "            os.unlink(file_path)\n",
@@ -66,45 +72,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Using Cython DTW, to speed things up\n",
     "\n",
     "\n",
-    "def generate_dtw_similarities(data_folder: str, meta_file: str, file_name: str):\n",
-    "    deleteFile(file_name)\n",
+    "def generate_dtw_similarities(\n",
+    "    data_folder: str, meta_file: str, file_name: str, similarities_output_folder: str\n",
+    "):\n",
+    "    deleteFile(file_name, similarities_output_folder)\n",
     "\n",
     "    files = mfh.read_meta_file(meta_file)\n",
     "    trajectories = fh.load_trajectory_files(files, data_folder)\n",
     "\n",
     "    df = dtw.cy_dtw(trajectories)\n",
-    "    df.to_csv(os.path.join(SIM_OUT_FOLDER, file_name))\n",
+    "\n",
+    "    df.to_csv(os.path.join(similarities_output_folder, file_name))\n",
     "\n",
     "\n",
     "def generate_parallell_dtw_similarities(\n",
-    "    data_folder: str, meta_file: str, file_name: str\n",
+    "    data_folder: str, meta_file: str, file_name: str, similarities_output_folder: str\n",
     "):\n",
-    "    deleteFile(file_name)\n",
+    "    deleteFile(file_name, similarities_output_folder)\n",
     "\n",
     "    files = mfh.read_meta_file(meta_file)\n",
     "    trajectories = fh.load_trajectory_files(files, data_folder)\n",
     "\n",
     "    df = dtw.cy_dtw_pool(trajectories)\n",
-    "    df.to_csv(os.path.join(SIM_OUT_FOLDER, \"parallell-\" + file_name))"
+    "    df.to_csv(os.path.join(similarities_output_folder, file_name))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# generate_dtw_similarities(DATA_ROME, TEST_SET_ROME, ROME_DTW_FILE)\n",
+    "# DTW similarities for Rome\n",
     "\n",
+    "# Test set\n",
+    "# generate_dtw_similarities(\n",
+    "#     DATA_ROME, TEST_SET_ROME, DTW_FILENAME_TEST_ROME, SIMILARITIES_OUTPUT_FOLDER_ROME\n",
+    "# )\n",
     "generate_parallell_dtw_similarities(\n",
-    "    DATA_ROME, TEST_SET_ROME, ROME_DTW_FILE_TEST)"
+    "    DATA_ROME, TEST_SET_ROME, DTW_FILENAME_TEST_ROME, SIMILARITIES_OUTPUT_FOLDER_ROME\n",
+    ")\n",
+    "\n",
+    "# Full set\n",
+    "# generate_dtw_similarities(DATA_ROME, FULL_SET_ROME, DTW_FILENAME_ROME)\n",
+    "generate_parallell_dtw_similarities(\n",
+    "    DATA_ROME, FULL_SET_ROME, DTW_FILENAME_ROME, SIMILARITIES_OUTPUT_FOLDER_ROME\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DTW similarities for Porto\n",
+    "# Test set\n",
+    "# generate_dtw_similarities(\n",
+    "#     DATA_PORTO,\n",
+    "#     TEST_SET_PORTO,\n",
+    "#     DTW_FILENAME_TEST_PORTO,\n",
+    "#     SIMILARITIES_OUTPUT_FOLDER_PORTO,\n",
+    "# )\n",
+    "generate_parallell_dtw_similarities(\n",
+    "    DATA_PORTO,\n",
+    "    TEST_SET_PORTO,\n",
+    "    DTW_FILENAME_TEST_PORTO,\n",
+    "    SIMILARITIES_OUTPUT_FOLDER_PORTO,\n",
+    ")\n",
+    "\n",
+    "# Full set\n",
+    "# generate_dtw_similarities(\n",
+    "#     DATA_PORTO, FULL_SET_PORTO, DTW_FILENAME_PORTO, SIMILARITIES_OUTPUT_FOLDER_PORTO\n",
+    "# )\n",
+    "generate_parallell_dtw_similarities(\n",
+    "    DATA_PORTO, FULL_SET_PORTO, DTW_FILENAME_PORTO, SIMILARITIES_OUTPUT_FOLDER_PORTO\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DTW similarities for Kolombus\n",
+    "# Test set\n",
+    "# generate_dtw_similarities(DATA_KOLOMBUS, TEST_SET_KOLOMBUS, DTW_FILENAME_TEST_KOLOMBUS, SIMILARITIES_OUTPUT_FOLDER_KOLOMBUS)\n",
+    "generate_parallell_dtw_similarities(\n",
+    "    DATA_KOLOMBUS,\n",
+    "    TEST_SET_KOLOMBUS,\n",
+    "    DTW_FILENAME_TEST_KOLOMBUS,\n",
+    "    SIMILARITIES_OUTPUT_FOLDER_KOLOMBUS,\n",
+    ")\n",
+    "\n",
+    "# Full set\n",
+    "# generate_dtw_similarities(\n",
+    "#     DATA_PORTO, FULL_SET_PORTO, DTW_FILENAME_PORTO, SIMILARITIES_OUTPUT_FOLDER_PORTO\n",
+    "# )\n",
+    "# generate_dtw_similarities(DATA_KOLOMBUS, FULL_SET_KOLOMBUS, DTW_FILENAME_KOLOMBUS, SIMILARITIES_OUTPUT_FOLDER_KOLOMBUS)\n",
+    "generate_parallell_dtw_similarities(\n",
+    "    DATA_KOLOMBUS,\n",
+    "    FULL_SET_KOLOMBUS,\n",
+    "    DTW_FILENAME_KOLOMBUS,\n",
+    "    SIMILARITIES_OUTPUT_FOLDER_KOLOMBUS,\n",
+    ")"
    ]
   }
  ],
