--- a/processing/rome_clean_data.ipynb
+++ b/processing/rome_clean_data.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,13 +55,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Declaring variables and constants for this sheet\n",
     "\n",
-    "SHOULD_DELETE_OLD_FILES = False\n",
+    "SHOULD_DELETE_OLD_FILES = True\n",
     "\n",
     "OUTPUT_FOLDER = \"../dataset/rome/output\"\n",
     "RAW_DATA_FILE = \"../dataset/rome/rome_raw.txt\"\n",
@@ -84,7 +84,7 @@
     ")\n",
     "MAX_DIST_BETWEEN_LOCATIONS = 0.4  # Km\n",
     "\n",
-    "NUMBER_OF_TRACES = 500\n",
+    "NUMBER_OF_TRACES = 100000\n",
     "\n",
     "X = calculate_trajectory_distance([(MIN_LAT, MIN_LON), (MAX_LAT, MIN_LON)])\n",
     "Y = calculate_trajectory_distance([(MIN_LAT, MIN_LON), (MIN_LAT, MAX_LON)])"
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
      "output_type": "stream",
      "text": [
       "[[2, '2014-02-01 00:14:10.132878+01', [41.9033913036255, 12.4876087503095]], [2, '2014-02-01 01:14:53.440003+01', [41.8999142436576, 12.4441906822934]], [2, '2014-02-01 01:52:19.7449+01', [41.8959594244013, 12.4496450994481]], [2, '2014-02-01 02:58:57.352827+01', [41.8824816421777, 12.454844364531]], [2, '2014-02-01 04:42:58.23288+01', [41.9077406913423, 12.4910772764437]], [2, '2014-02-01 21:42:43.685802+01', [41.9053566960219, 12.4493586509094]], [2, '2014-02-01 21:58:53.645706+01', [41.9031474155762, 12.4867018941079]], [2, '2014-02-01 23:40:25.264024+01', [41.9127874299986, 12.4929061846492]], [2, '2014-02-02 04:58:28.729974+01', [41.9126299945405, 12.4845480461226]], [2, '2014-02-02 05:19:42.090741+01', [41.9129688470329, 12.4502509292558]]]\n",
-      "Created 6118 trajectories\n"
+      "Created 3059 trajectories\n"
      ]
     }
    ],
@@ -241,11 +241,10 @@
     "    try:\n",
     "        # Checking whether time between two consecutive points are greater than a given const\n",
     "        t_last = datetime.strptime(\n",
-    "            last_timestamp[0: last_timestamp.index(\".\")], \"%Y-%m-%d %H:%M:%S\"\n",
+    "            last_timestamp[0 : last_timestamp.index(\".\")], \"%Y-%m-%d %H:%M:%S\"\n",
     "        )\n",
     "        t_current = datetime.strptime(\n",
-    "            current_timestamp[0: current_timestamp.index(\n",
-    "                \".\")], \"%Y-%m-%d %H:%M:%S\"\n",
+    "            current_timestamp[0 : current_timestamp.index(\".\")], \"%Y-%m-%d %H:%M:%S\"\n",
     "        )\n",
     "\n",
     "    except:\n",
@@ -277,8 +276,7 @@
     "            old_loc = trajectory[0]\n",
     "            for loc in trajectory:\n",
     "                if old_loc != loc:\n",
-    "                    distance = calculate_trajectory_distance(\n",
-    "                        [(old_loc), (loc)])\n",
+    "                    distance = calculate_trajectory_distance([(old_loc), (loc)])\n",
     "\n",
     "                    # If distance between two consecutive coordinates are too great:\n",
     "                    if distance > MAX_DIST_BETWEEN_LOCATIONS:\n",
@@ -294,8 +292,7 @@
     "                # print(trajectory)\n",
     "                # coordinates_lists = [[lat, lon] for lat, lon in trajectory]\n",
     "                cleaned_trajectories.append(\n",
-    "                    [current_driver_id, current_timestamp,\n",
-    "                        [float(lat), float(lon)]]\n",
+    "                    [current_driver_id, current_timestamp, [float(lat), float(lon)]]\n",
     "                )\n",
     "                # if LOG:\n",
     "                #     print(\n",
@@ -306,6 +303,7 @@
     "                    OUTPUT_FOLDER=OUTPUT_FOLDER,\n",
     "                    file_name=name_counter,\n",
     "                    trajectory=trajectory,\n",
+    "                    split_coordinate=False,\n",
     "                )\n",
     "                # if LOG:\n",
     "\n",
@@ -314,7 +312,6 @@
     "                #             name_counter, trajectory_distance, shortest_distance, len(trajectory)}\"\n",
     "                #     )\n",
     "\n",
-    "                counter += 1\n",
     "                name_counter = increment_alphabetical(name_counter)\n",
     "\n",
     "                counter += 1\n",
@@ -325,8 +322,8 @@
     "            trajectory.clear()\n",
     "\n",
     "    # If enough trajetories are generated:\n",
-    "    # if counter >= NUMBER_OF_TRACES:\n",
-    "    #     break\n",
+    "    if counter >= NUMBER_OF_TRACES:\n",
+    "        break\n",
     "\n",
     "    last_timestamp = current_timestamp\n",
     "    # last_driver_id = last_driver_id\n",
@@ -342,12 +339,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "create_meta_files(path_to_files=OUTPUT_FOLDER,\n",
-    "                  data_prefix=\"R_\", create_test_set=True)"
+    "create_meta_files(path_to_files=OUTPUT_FOLDER, data_prefix=\"R_\", create_test_set=True)"
    ]
   }
  ],
