linting and similarity run times for porto up to 300 trajectories

--- a/frechet_benchmark.ipynb
+++ b/frechet_benchmark.ipynb
@@ -265,7 +265,10 @@
    "source": [
     "# Frechet similarities for Rome\n",
     "generate_parallell_frechet_similarities(\n",
-    "    DATA_ROME, TEST_SET_ROME, FRECHET_FILENAME_TEST_ROME, SIMILARITIES_OUTPUT_FOLDER_ROME\n",
+    "    DATA_ROME,\n",
+    "    TEST_SET_ROME,\n",
+    "    FRECHET_FILENAME_TEST_ROME,\n",
+    "    SIMILARITIES_OUTPUT_FOLDER_ROME,\n",
     ")\n",
     "\n",
     "# Full set\n",
@@ -339,7 +342,10 @@
    "source": [
     "# Frechet similarities for Porto\n",
     "generate_parallell_frechet_similarities(\n",
-    "    DATA_PORTO, TEST_SET_PORTO, FRECHET_FILENAME_TEST_PORTO, SIMILARITIES_OUTPUT_FOLDER_PORTO\n",
+    "    DATA_PORTO,\n",
+    "    TEST_SET_PORTO,\n",
+    "    FRECHET_FILENAME_TEST_PORTO,\n",
+    "    SIMILARITIES_OUTPUT_FOLDER_PORTO,\n",
     ")\n",
     "\n",
     "# # Full set\n",
@@ -356,7 +362,10 @@
    "source": [
     "# Frechet similarities for Kolumbus\n",
     "generate_parallell_frechet_similarities(\n",
-    "    DATA_KOLUMBUS, TEST_SET_KOLUMBUS, FRECHET_FILENAME_TEST_KOLUMBUS, SIMILARITIES_OUTPUT_FOLDER_KOLUMBUS\n",
+    "    DATA_KOLUMBUS,\n",
+    "    TEST_SET_KOLUMBUS,\n",
+    "    FRECHET_FILENAME_TEST_KOLUMBUS,\n",
+    "    SIMILARITIES_OUTPUT_FOLDER_KOLUMBUS,\n",
     ")\n",
     "\n",
     "# # Full set\n",
@@ -382,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6+"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
